sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:16: error: value -= is not a member of Int
			fin -=1;
                            ^AlgCocktailSort2:24: error: value += is not a member of Int
			debut +=1;
                              ^